--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
 # under it that we want to run (and want to be able to run) as local tests
 script: 
   - flake8 *.py tests ga4gh scripts
-              --exclude=ez_setup.py,ga4gh/*_pb2.py,ga4gh/datamodel/obo_parser.py
+              --exclude=ez_setup.py,ga4gh/*_pb2.py,ga4gh/parser/obo.py
   - nosetests --with-coverage --cover-package ga4gh
               --cover-inclusive --cover-min-percentage 80
               --cover-branches --cover-erase
